Fix extraction issue
